# policysim

./: .gitignore  01-RESEARCH.md  02-RESEARCH.md  03-RESEARCH.md  04-RESEARCH.md  05-RESEARCH.md  06-RESEARCH.md  07-RESEARCH.md  08-RESEARCH.md  09-RESEARCH.md  README.md  package.json  pnpm-lock.yaml  policysim-prompt.md  pyproject.toml
.agent/: gsd-file-manifest.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  SUMMARY.md
.planning/phases/02-database-modeling/: 02-01-PLAN.md  SUMMARY.md
.planning/phases/03-llm-adapters/: 03-01-PLAN.md  SUMMARY.md
.planning/phases/04-world-builder/: 04-01-PLAN.md  SUMMARY.md
.planning/phases/09-network-graph/: SUMMARY.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
backend/: .env.example  config.py  database.py  deps.py  main.py  models.py  pyproject.toml
backend/api/: routes.py  simulation_manager.py
backend/data/scenarios/: kazakhstan_2022.json
backend/engine/: backtester.py  builder.py  metrics.py  parsers.py  runner.py  schemas.py
backend/llm/: __init__.py  base.py  factory.py
backend/llm/providers/: anthropic.py  openai.py
backend/regions/: base.py
backend/services/: reporting_service.py  simulation_service.py
backend/tests/: test_backtester.py  test_builder.py  test_manager.py  test_metrics.py  test_reporting.py  test_runner.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.html
scripts/: test_builder.py  test_llm.py  test_runner.py  test_sim_db.py  test_sse.py  verify_db.py
(+16 files in other folders)
